# FlySWATTER

./: .gitignore  CLAUDE.md  ConvertAcclLogsToPlots.py  README.md  ScoreArousability.py  arousal_score_well_mapping.xlsx  flyswatter_gui.py  flyswatter_gui.spec  pyproject.toml
BATCH_SCRIPTS/: build_flyswatter_mac_app.sh  build_flyswatter_windows_exe.ps1  run_convert_accl_logs_to_plots.sh
gui/: __init__.py  app_state.py  main_window.py  theme.py  workers.py
gui/screens/: __init__.py  choose_analysis_screen.py  progress_screen_base.py  pulse_progress_screen.py  pulse_results_screen.py  pulse_upload_screen.py  score_progress_screen.py  score_results_screen.py  score_upload_screen.py  sleep_definition_screen.py  time_window_screen.py  welcome_screen.py  well_mapping_screen.py
gui/widgets/: __init__.py  analysis_card.py  image_preview_card.py  path_drop_widget.py  range_slider_widget.py  well_plate_widget.py
services/: __init__.py  app_paths.py  default_well_mapping.py  models.py  output_packaging.py  power_management.py  pulse_service.py  researcher_store.py  run_paths.py  score_service.py  validators.py
tests/: test_app_paths.py  test_default_well_mapping.py  test_validators.py
